--- a/my-app/src/components/Carousel/Carousel.css
+++ b/my-app/src/components/Carousel/Carousel.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 .carousels
 {
     width: 100%;
@@ -15,8 +16,7 @@
     height: 85vh;
     object-fit: cover;
     position: relative;
-    opacity: 0.6;
-
+    opacity: 0.4;
 }
 .carousel-caption
 {
@@ -25,5 +25,60 @@
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 600px;
+   
+}
+.carousel-caption h1
+{
+    font-family:"Playfair Display", serif;
+    font-weight: 500;
+    font-size: 42px;
+}
+.carousel-caption .para
+{
+    margin-top: 18px;
+    text-align: center;
+    font-size: 24px;
+    line-height: 1.5;
+}
+.carousel-caption .para .common-btn
+{
+    background-color: white;
+    color:black;
+    margin-top: 20px;
+    font-size: 14px;
+}
+.carousel-caption .para .common-btn:hover
+{
+    background-color:transparent;
+    border: 1px solid white;
+    color: white;
+}
 
+/* Media Queries */
+@media (max-width: 900px) 
+{
+    .carousel-caption
+    {
+        width: 400px;
+    }
+    .carousel-caption h1
+    {
+        /* font-family:"Playfair Display", serif; */
+        /* font-weight: 400; */
+        font-size: 21px;
+    }
+    .carousel-caption .para
+    {
+        /* margin-top: 18px; */
+        /* text-align: center; */
+        font-size: 16px;
+        /* line-height: 1.5; */
+    }
+    .carousel-item .carousel-img1 img
+    {
+        height: 65vh;
+    }
+
+    
 }
