Some Pages and Changes added

--- a/my-app/src/components/Navbar/Navbar.css
+++ b/my-app/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@ header .navbar{
     width: 100%;
     overflow: hidden;
     position: absolute;
-    background-color: white;
+    background-color: rgb(251, 251, 251);
     z-index: 100000;
     padding: 0px;
 }
