--- a/my-app/src/pages/Home/Section5/Section5.css
+++ b/my-app/src/pages/Home/Section5/Section5.css
@@ -18,16 +18,23 @@
 }
 .section5 .desc
 {
+    margin-top: 45px;
     display: flex;
-    gap: 38px;
+    gap: 40px;
     align-items: center;
 }
-
+.section5 .desc .desc1
+{
+    width: 500px;
+}
 .section5 .desc .desc1 img
+{
+    width: 450px;
+}
+.section5 .desc .desc2
 {
     width: 600px;
 }
-
 .section5 .desc .desc2 h2
 {
     font-family: "Roboto Condensed", sans-serif;
@@ -52,5 +59,12 @@
         gap: 25px;
         /* align-items: center; */
     }
-
+    .section5 .desc .desc1
+    {
+        width: 100%;
+    }
+    .section5 .desc .desc2
+    {
+        width: 100%;
+    }
 }
