--- a/my-app/src/pages/Shop/Section1/HeroImg.css
+++ b/my-app/src/pages/Shop/Section1/HeroImg.css
@@ -47,6 +47,10 @@
     font-family:"Playfair Display", serif;
     font-weight: 600;
 }
+.heroImg .content .para
+{
+    font-family:"Playfair Display", serif;
+}
 .heroImg .content .form form
 {
     display: flex;
@@ -66,7 +70,6 @@
 .heroImg .content .form form input[type=text]
 {
     padding-left: 20px;
-
 }
 
 .heroImg .content .form form button
@@ -99,6 +102,11 @@
     {
         font-size: 12px;
         /* padding-left:10px; */
+    }
+    .heroImg .content .para
+    {
+        /* text-align: center; */
+        width: 350px;
     }
     .heroImg .mask
     {
