--- a/my-app/src/pages/Jobs/Section1/JobsHero.css
+++ b/my-app/src/pages/Jobs/Section1/JobsHero.css
@@ -1,23 +1,20 @@
 .jobs-hero 
 {
     padding-top: 100px;
-    /* background: linear-gradient(180deg,rgba(93, 181, 253, 0.895),rgb(183, 223, 255), #ffffff22 100%); */
     background: linear-gradient(180deg,rgba(135, 201, 255, 0.895), #ffffff22 100%);
     width: 100%;
-    /* height: 100vh; */
     overflow: hidden;
 }
 .jobs-hero .jobs-hero-main
 {
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
+    gap: 40px;
     padding-top: 30px;
-    /* flex-wrap: wrap; */
 }
 .jobs-hero .jobs-hero-main .jobs-hero-side1
 {
     width: 540px;
+    flex: 1;
 }
 .jobs-hero .jobs-hero-main .jobs-hero-side1 .jobs-hero-side1-header
 {
@@ -98,4 +95,42 @@
     height: 600px;
     object-fit: contain;
     overflow: hidden;
+}
+
+
+@media (max-width:914px)  
+{
+    .jobs-hero .jobs-hero-main .jobs-hero-side1
+    {
+        width: 100%;
+
+    }
+    .jobs-hero .jobs-hero-main
+    {
+        gap: 65px;
+        flex-direction: column;
+    }
+    .jobs-hero .jobs-hero-main .jobs-hero-side1 .jobs-hero-side1-header
+    {
+        padding-top: 60px;
+    }
+    .jobs-hero  .jobs-hero-side2 .jobs-hero-side2-img
+    {
+    
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .jobs-hero  .jobs-hero-side2 .jobs-hero-side2-img img
+    {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        overflow: hidden;
+    }
+    .jobs-hero .jobs-hero-main .jobs-hero-side1 .jobs-searchbar
+    {
+        width: 100%;
+    }
+
 }
