Job Page Completed

--- a/my-app/src/pages/Contact/Contact.css
+++ b/my-app/src/pages/Contact/Contact.css
@@ -38,9 +38,11 @@
     border: 1px solid rgb(165, 165, 165);
     outline: none;
     width: 88%;
-    padding: 8px;
+    padding-left: 20px;
     border-radius: 20px;
     font-size: 14px;
+    height: 40px;
+    /* padding-left: 8px; */
 }
 .contact .contact-form .form-inp input:focus
 {
@@ -49,7 +51,7 @@
 }
 .contact .contact-form .form-inp input::placeholder
 {
-    padding-left: 8px;
+    /* padding-left: 8px; */
     font-size: 13px;
 }
 .contact .contact-form .form-inp textarea
@@ -58,13 +60,15 @@
     border: 1px solid rgb(165, 165, 165);
     outline: none;
     width: 88%;
-    padding: 7px;
+    /* padding: 7px; */
     border-radius: 20px;
     font-size: 14px;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 .contact .contact-form .form-inp textarea::placeholder
 {
-    padding-left: 8px;
+    /* padding-left: 8px; */
     font-size: 13px;
 }
 .contact .contact-form .form-inp textarea:focus
