--- a/my-app/src/pages/Shop/Section1/HeroImg.css
+++ b/my-app/src/pages/Shop/Section1/HeroImg.css
@@ -50,6 +50,7 @@
 .heroImg .content .para
 {
     font-family:"Playfair Display", serif;
+    text-transform: capitalize;
 }
 .heroImg .content .form form
 {
